# python_package_template

./: README.md  cookiecutter.json
.github/workflows/: test.yml
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .gitignore  LICENSE  README.md  pyproject.toml  {% if cookiecutter.include_docs == 'y' %}mkdocs.yml{% endif %}
{{cookiecutter.package_name}}/.github/actions/setup/: action.yml
{{cookiecutter.package_name}}/.github/workflows/: test_deploy.yml
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __main__.py  add_one.py
{{cookiecutter.package_name}}/tests/: test_add_one.py
{{cookiecutter.package_name}}/{% if cookiecutter.include_docs == 'y' %}docs{% endif %}/: api.md
{{cookiecutter.project_name}}/: README.md  pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: add_one.py
{{cookiecutter.project_name}}/tests/: test_add_one.py
