[project]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = [
    { name = "{{cookiecutter.author_name}}" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">={{cookiecutter.python_version}}"
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit==4.3.0",
    "pytest==8.4.1",
    "pytest-cov==6.0.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]