[project]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = [
    { name = "{{cookiecutter.author_name}}" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    {% if cookiecutter.include_cli == 'y' %}
    "click==8.1.7",
    {% endif %}
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.3.0",
    "pytest==8.4.1",
    "pytest-cov==6.0.0",
]

{% if cookiecutter.include_cli == 'y' %}
[project.scripts]
{{cookiecutter.package_name}} = "{{cookiecutter.package_name}}.__main__:cli"
{% endif %}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
